<resources>
    <string name="app_name" translatable="false">E-commerce Lab</string>
    <string name="server_client_id" translatable="false">409127025097-q06j5ekj8gfdup368el0btu8euustjrg.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">2179956972121731</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2179956972121731</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">Default channel</string>
    <string name="launcher_alert_dialog_message">No internet connection.
        \nPlease enable internet connection and launch this app once again :)</string>
    <string name="launcher_alert_dialog_confirm" translatable="false">Ok</string>
    <string name="menu_toolbar_my_account_string">My Account</string>
    <string name="menu_toolbar_search_string">Search</string>
    <string name="menu_toolbar_options_string">Options</string>
    <string name="main_menu_search_hint">Search..</string>
    <string name="nav_view_upgrade_acc_text">Sign up with other method to upgrade your account</string>
    <string name="menu_nav_view_settings_text">Settings</string>
    <string name="valid_until_text">valid until:</string>
    <string name="price_text">Price:</string>
    <string name="show_my_coupon_text">Show my coupon</string>
    <string name="hide_my_coupon_text">Hide coupon</string>
    <string name="coupon_details_code_text">Promo code:</string>
    <string name="settings_push_notifications_label">Push notifications:</string>
    <string name="settings_notification_topic_news">News</string>
    <string name="settings_notification_topic_offers">Special offers</string>
    <string name="settings_notification_topic_discount">Discounts</string>
    <string name="settings_terms_label">Terms and privacy policy:</string>
    <string name="settings_terms_conditions_link"><![CDATA[Terms & conditions]]></string>
    <string name="settings_terms_privacy_link">Privacy policy</string>
    <string name="settings_terms_licenses_link">Licenses</string>
    <string name="settings_log_out_label">Log out:</string>
    <string name="settings_log_out_button">Log Out</string>
    <string name="settings_account_label">Delete account:</string>
    <string name="settings_delete_button">Delete</string>
    <string name="settings_log_out_alert_title">Log Out</string>
    <string name="settings_log_out_account_alert_message">Are you sure to log out?</string>
    <string name="settings_log_out_account_alert_confirm">Confirm</string>
    <string name="settings_log_out_account_alert_decline">Cancel</string>
    <string name="settings_delete_account_alert_title">Delete account</string>
    <string name="settings_delete_account_alert_message">Are you sure to delete your account?\n You cannot undo this action</string>
    <string name="settings_delete_account_alert_confirm">Confirm</string>
    <string name="settings_delete_account_alert_decline">Cancel</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_up_sign_in_text">Sign Up / Sign In:</string>
    <string name="continue_with_google_text">Continue with Google</string>
    <string name="continue_with_facebook_text">Continue with Facebook</string>
    <string name="continue_with_phone_text">Continue with Phone</string>
    <string name="continue_as_guest_text">or continue as a guest</string>
    <string name="login_alert_dialog_title">Note</string>
    <string name="login_alert_dialog_message">You are about to create new anonymous account.
        \nPlease note, that as anonymous user you won\'t be able to get access to all features of the app,
        but don\'t worry, you can convert your account to standard one at any time :)</string>
    <string name="login_alert_dialog_confirm">Continue</string>
    <string name="login_alert_dialog_decline">Cancel</string>
    <string name="verify_your_number_text">Verify your number</string>
    <string name="instruction_provide_number_text">Please enter your number to send a verification code. Operator rates may apply.</string>
    <string name="prefix_hint" translatable="false">Prefix</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="register_button_text">Register</string>
    <string name="terms_link_text">Terms of service &amp; privacy policy</string>
    <string name="more_info_text">More info</string>
    <string name="verify_text">Verify</string>
    <string name="enter_code_text">Enter the verification code sent to the number provided.</string>
    <string name="code_hint">Code</string>
    <string name="waiting_info_text">Waiting for code to be delivered</string>
    <string name="verify_error_empty_data">Please enter data</string>
    <string name="verify_error_empty_number">Please enter phone number</string>
    <string name="verify_error_wrong_type">Wrong format of data</string>
    <string name="verify_error_wrong_data">Wrong prefix or phone number</string>
    <string name="verify_sms_limit_information">You have reached daily sending SMS limit.\n
        Verification has been processed successfully, click "continue" to go to the main screen.</string>
    <string name="verify_sms_limit_button_text">Continue</string>
    <string name="check_offers_text">Check offers!</string>
    <string name="something_went_wrong_text">Ooops! Something went wrong. \nPlease check your internet connection</string>
    <string name="no_coupons_text">Unfortunately, \nyou do not have active coupons\n :(</string>
    <string name="no_products_text">Unfortunately, \nyou do not have active products\n :(</string>
    <string name="try_again_later_text">Try again later</string>
    <string name="barcode_scanner_title">Barcode Scanner</string>
    <string name="barcode_scanner_instruction_text">Instruction</string>
    <string name="barcode_scanner_instruction_body">1. Click the scan button.\n
        2. Allow this app to use camera.\n
        3. Aim the camera at barcode.\n
        4. Let camera get focus.\n
        5. You will return to this view as soon as app decode barcode.\n
        6. You can use displayed code to get a discount on your next order.</string>
    <string name="barcode_scanner_code_text">YOUR CODE WILL BE DISPLAYED HERE</string>
    <string name="barcode_scanner_switch_focus_text">Auto Focus</string>
    <string name="barcode_scanner_switch_flash_text">Flash</string>
    <string name="barcode_scanner_button_text">Scan</string>
    <string name="barcode_generator_title">Your card</string>
    <string name="barcode_generator_advice">This barcode represents your club card \n
        Let cashier scan this to get special promotions and offers</string>
    <string name="bottom_coupon_advice_text">Show barcode or text code to any staff member</string>
    <string name="bottom_place_title_text" translatable="false">Current place title</string>
    <string name="bottom_place_address_text" translatable="false">Current place address, postal code, city</string>
    <string name="bottom_place_open_hours_text" translatable="false">Current place open hours</string>
    <string name="first_fragment">Open hours</string>
    <string name="second_fragment">Contact info</string>
    <string name="bottom_sheet_today_open_text">Today open:</string>
    <string name="bottom_sheet_today_open_all_day_text">All day</string>
    <string name="bottom_sheet_today_closed_text">Today is closed</string>
    <string name="monday_text">Monday</string>
    <string name="tuesday_text">Tuesday</string>
    <string name="wednesday_text">Wednesday</string>
    <string name="thursday_text">Thursday</string>
    <string name="friday_text">Friday</string>
    <string name="saturday_text">Saturday</string>
    <string name="sunday_text">Sunday</string>
    <string name="contact_us_text">In case of any questions,\n please contact us:</string>
    <string name="button_check_product">Check</string>
    <string name="button_check_coupon">Check</string>
    <string name="button_check_details">View details</string>
    <string name="snackbar_no_network_connection">No internet connection</string>
    <string name="snackbar_connection_restored">Connection restored</string>
    <string name="no_internet_connection_main_text">Connect to the internet.</string>
    <string name="no_internet_connection_additional_text">You\'re offline. Check your internet connection.</string>
    <string name="no_internet_connection_button_text">Refresh</string>
    <string name="internet_connection_required">Internet connection is required</string>
    <string name="localization_permission_denied">Localization permission denied</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="phone_number_auth_failed">There was an error with authorization your phone number, please try again later</string>
    <string name="auth_email_already_exists">This email has been already used with different type of registration method</string>
    <string name="sms_code_limit_reached">You have reached daily limit for sending SMS codes. Process will continue with default code</string>
    <string name="account_already_exits">Already signed in as a guest!\nPlease choose other option</string>
    <string name="account_auth_failed">Authorization failed. Please check your internet connection or try again later</string>
    <string name="default_toast_error_message">Oops.. something went wrong. Check your internet connection or try again later</string>
    <string name="settings_acc_log_out_successfully">Logged out successfully</string>
    <string name="settings_acc_delete_successfully">Account deleted successfully</string>
    <string name="map_connection_suspended">Connection with Google services was suspended</string>
    <string name="map_connection_failed">Connection with Google services failed</string>
    <string name="searchview_hint">Search for…</string>
    <string name="log_in_view_logo_desc" translatable="false">log_in_view_logo_desc</string>
    <string name="navigation_header_logo_desc" translatable="false">Navigation header company logo</string>
    <string name="sign_up_image_desc" translatable="false">Sign Up logo image</string>
    <string name="grid_list_item_content_desc" translatable="false">Resource passed with JSON, will be populated
        in 2 different category activities.</string>
    <string name="fragment_home_special_image_desc" translatable="false">Highlighted special offer image</string>
    <string name="tab_view_image_desc" translatable="false">TabView icon in BottomSheet</string>
    <string name="coupon_details_image_desc" translatable="false">Coupon details image</string>
    <string name="company_logo_desc" translatable="false">Company logo</string>
    <string name="loading_indicator_desc" translatable="false">Custom loading indicator</string>
    <string name="notification_logo_desc" translatable="false">White logo push notification</string>
    <string name="barcode_desc" translatable="false">Barcode</string>
    <string name="phone_icon_verify_code_desc" translatable="false">Text icon in 1nd step of verification phone num</string>
    <string name="text_icon_verify_code_desc" translatable="false">Text icon in 2nd step of verification phone num</string>
    <string name="view_flipper_arrow_desc" translatable="false">Arrow image to switch view in view flipper</string>
    <string name="coupon_details_barcode" translatable="false">Generated barcode that contains coupon code</string>
    <string name="app_bar_main_no_network_image_desc" translatable="false">No internet connection image</string>
</resources>