<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBackground"
    android:orientation="vertical"
    android:padding="@dimen/layout_container_padding"
    tools:context=".ui.login.phoneAuthNumber.LogInPhoneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grid_item_shadow"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/register_number_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/small_value">

            <LinearLayout
                android:id="@+id/verify_number_text_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/verify_number_text_container_height"
                android:background="@drawable/rounded_corners_orange"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/verify_number_text"
                    style="@style/verify_number_text_style"
                    android:text="@string/verify_your_number_text" />

                <TextView
                    android:id="@+id/verify_number_instruction_text"
                    style="@style/verify_number_instruction_text_style"
                    android:text="@string/instruction_provide_number_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_input_container_margin_top"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verify_number_text_container">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_prefix_input_box"
                    style="@style/register_prefix_input_box_style"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/login_edittext_error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_prefix_input"
                        style="@style/register_prefix_input_style"
                        android:hint="@string/prefix_hint" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_number_input_box"
                    style="@style/register_number_input_box_style"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/login_edittext_error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_number_input"
                        style="@style/register_number_input_style"
                        android:hint="@string/phone_number_hint" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/register_phone_icon_image"
                style="@style/register_phone_icon_image"
                android:contentDescription="@string/phone_icon_verify_code_desc"
                android:src="@drawable/ic_circle_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/register_number_button"
                style="@style/register_number_button_style"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/register_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_input_container" />

            <TextView
                android:id="@+id/terms_privacy_policy_link_text"
                style="@style/terms_privacy_policy_link_text_style"
                android:text="@string/terms_link_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_number_button" />

            <TextView
                android:id="@+id/more_info_link_text"
                style="@style/more_info_link_text_style"
                android:text="@string/more_info_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terms_privacy_policy_link_text" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>
