<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBackground"
    android:padding="@dimen/layout_container_padding"
    tools:context=".ui.settings.SettingsActivity">

    <ScrollView
        android:id="@+id/settings_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grid_item_shadow">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/settings_label_notification"
                style="@style/settings_label_style"
                android:drawableStart="@drawable/ic_notification"
                android:text="@string/settings_push_notifications_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/settings_notification_one"
                style="@style/settings_list_item_style"
                android:text="@string/settings_notification_topic_news"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_label_notification" />

            <Switch
                android:id="@+id/settings_notification_switch_one"
                style="@style/settings_switch_toggle_style"
                android:theme="@style/switch_button_barcode_scanner"
                app:layout_constraintBottom_toBottomOf="@+id/settings_notification_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/settings_notification_one" />

            <TextView
                android:id="@+id/settings_notification_two"
                style="@style/settings_list_item_style"
                android:text="@string/settings_notification_topic_offers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_notification_one" />

            <Switch
                android:id="@+id/settings_notification_switch_two"
                style="@style/settings_switch_toggle_style"
                android:theme="@style/switch_button_barcode_scanner"
                app:layout_constraintBottom_toBottomOf="@+id/settings_notification_two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/settings_notification_two" />

            <TextView
                android:id="@+id/settings_notification_three"
                style="@style/settings_list_item_style"
                android:text="@string/settings_notification_topic_discount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_notification_two" />

            <Switch
                android:id="@+id/settings_notification_switch_three"
                style="@style/settings_switch_toggle_style"
                android:theme="@style/switch_button_barcode_scanner"
                app:layout_constraintBottom_toBottomOf="@+id/settings_notification_three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/settings_notification_three" />

            <TextView
                android:id="@+id/settings_label_permission"
                style="@style/settings_label_style"
                android:drawableStart="@drawable/ic_permission_key"
                android:text="@string/settings_permissions_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_notification_three" />

            <TextView
                android:id="@+id/settings_permission_one"
                style="@style/settings_list_item_style"
                android:text="@string/settings_permission_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_label_permission" />

            <Switch
                android:id="@+id/settings_permission_switch_one"
                style="@style/settings_switch_toggle_style"
                android:theme="@style/switch_button_barcode_scanner"
                app:layout_constraintBottom_toBottomOf="@+id/settings_permission_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/settings_permission_one" />

            <TextView
                android:id="@+id/settings_label_terms"
                style="@style/settings_label_style"
                android:drawableStart="@drawable/ic_lock"
                android:text="@string/settings_terms_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_permission_one" />

            <TextView
                android:id="@+id/settings_terms_one"
                style="@style/settings_list_item_link_style"
                android:text="@string/settings_terms_conditions_link"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_label_terms" />

            <TextView
                android:id="@+id/settings_terms_two"
                style="@style/settings_list_item_link_style"
                android:text="@string/settings_terms_privacy_link"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_terms_one" />

            <TextView
                android:id="@+id/settings_terms_three"
                style="@style/settings_list_item_link_style"
                android:text="@string/settings_terms_licenses_link"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_terms_two" />

            <TextView
                android:id="@+id/settings_label_delete_account"
                style="@style/settings_delete_label_style"
                android:drawableStart="@drawable/ic_delete_account"
                android:text="@string/settings_account_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_terms_three" />

            <TextView
                android:id="@+id/settings_delete_account_text"
                style="@style/settings_list_item_style"
                android:text="@string/settings_acc_delete_instruction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_label_delete_account" />

            <Button
                android:id="@+id/settings_delete_button"
                style="@style/settings_delete_button_style"
                android:text="@string/settings_delete_button"
                app:layout_constraintBottom_toBottomOf="@+id/settings_delete_account_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/settings_delete_account_text" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>