<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBackground"
    android:orientation="vertical"
    android:padding="@dimen/layout_container_padding"
    tools:context=".ui.barcodeScanner.BarcodeScanner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grid_item_shadow"
        android:orientation="vertical">

        <TextView
            android:id="@+id/barcode_scanner_title_text_view"
            style="@style/barcode_scanner_title"
            android:text="@string/barcode_scanner_title" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grid_item_shadow">

            <TextView
                android:id="@+id/barcode_scanner_instruction_text"
                style="@style/barcode_scanner_instruction_text"
                android:text="@string/barcode_scanner_instruction_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/barcode_scanner_instruction_text_view"
                style="@style/barcode_scanner_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcode_scanner_instruction_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barcode_scanner_instruction_text" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/barcode_scanner_scan_result_text_view"
            style="@style/barcode_scanner_scan_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/barcode_scanner_code_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barcode_scanner_instruction_text_view" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grid_item_shadow"
            tools:context=".ui.barcodeScanner.BarcodeScanner">

            <TextView
                android:id="@+id/barcode_scanner_switch_one_text_view"
                style="@style/barcode_scanner_switch_one_text"
                android:text="@string/barcode_scanner_switch_focus_text"
                app:layout_constraintBottom_toTopOf="@+id/barcode_scanner_switch_two_text_view"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/barcode_scanner_switch_button_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/switch_button_barcode_scanner"
                app:layout_constraintBottom_toBottomOf="@+id/barcode_scanner_switch_one_text_view"
                app:layout_constraintStart_toEndOf="@+id/barcode_scanner_switch_one_text_view"
                app:layout_constraintTop_toTopOf="@+id/barcode_scanner_switch_one_text_view" />

            <TextView
                android:id="@+id/barcode_scanner_switch_two_text_view"
                style="@style/barcode_scanner_switch_two_text"
                android:text="@string/barcode_scanner_switch_flash_text"
                app:layout_constraintBottom_toTopOf="@+id/barcode_scanner_scan_button"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/barcode_scanner_switch_button_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/switch_button_barcode_scanner"
                app:layout_constraintBottom_toBottomOf="@+id/barcode_scanner_switch_two_text_view"
                app:layout_constraintStart_toStartOf="@+id/barcode_scanner_switch_button_one"
                app:layout_constraintTop_toTopOf="@+id/barcode_scanner_switch_two_text_view" />

            <Button
                android:id="@+id/barcode_scanner_scan_button"
                style="@style/barcode_scanner_scan_button"
                android:text="@string/barcode_scanner_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>
